changed red color from #b30000 to #eb0000 for beter color contrast (accessibility AA fix)

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ Version: 4
 .footer {
   width: 100%;
   height: 50px;
-  background-color: #b30000;
+  background-color: #eb0000;
   color: #fff;
   margin-top: 20px;
   font-size: 14px;
@@ -73,7 +73,7 @@ Version: 4
   height: 23px;
   margin-right: 4px;
   padding: 3px 7px 0;
-  background-color: #b30000;
+  background-color: #eb0000;
   color: #fff;
   text-decoration: none;
 }
@@ -104,7 +104,7 @@ Version: 4
   margin: 10px 0;
   font-size: 18px;
   font-weight: 700;
-  color: #b30000
+  color: #eb0000
 }
 
 .fb-comments {
@@ -137,7 +137,7 @@ Version: 4
 }
 
 .you-can-download__link {
-  color: #b30000
+  color: #eb0000
 }
 
 .you-can-download__link:hover {
